tests/kulezi_tests/bad/not_a_class01.lat

int f() {return 0;}

int main() {
    new f;
    return 0;
}